# kvirtual

./: .gitignore  CMakeLists.txt  README  README.md
doc/: CMakeLists.txt  index.docbook
extra/valgrind/: README
icons/: hisc-app-kvirtual.svgz  make_icons.sh
pics/: CMakeLists.txt  README  make_img.sh
po/: CMakeLists.txt  kvirtual.pot
po/fr/: kvirtual.po
src/: CMakeLists.txt  Messages.sh  kvirtual.cpp  kvirtual.desktop  kvirtual.h  kvirtual.kcfg  kvirtual.notifyrc  kvirtual_create_img.ui  kvirtualcreateimg.cpp  kvirtualcreateimg.h  kvirtualdevice.cpp  kvirtualdevice.h  kvirtualiface.cpp  kvirtualiface.h  kvirtualiface_widget.ui  kvirtualifacewidget.cpp  kvirtualifacewidget.h  kvirtualoptions.cpp  kvirtualoptions.h  kvirtualprocess.cpp  kvirtualprocess.h  kvirtualsettingsview.cpp  kvirtualsettingsview.h  kvirtualstorage.cpp  kvirtualstorage.h  kvirtualstorage_widget.ui  kvirtualstoragewidget.cpp  kvirtualstoragewidget.h  kvirtualui.rc  kvirtualview.cpp  kvirtualview.h  kvirtualview_base.ui  main.cpp  prefs_base.ui  settings.kcfgc
