set(KVIRTUAL_DATA_FILES
    linux.svg
    centos.svg
    debian.svg
    fedora.svg
    freebsd.svg
    netbsd.svg
    redhat.svg
    mandriva.svg
    openbsd.svg
    windows.svg
    archlinux.svg
    gentoo.svg
    knoppix.svg
    linuxmint.svg
    mepis.svg
    opensuse.svg
    slackware.svg
    ubuntu.svg
    kubuntu.svg
    fluxbuntu.svg
    aptosid.svg
    linux.png
    centos.png
    debian.png
    fedora.png
    freebsd.png
    netbsd.png
    redhat.png
    mandriva.png
    openbsd.png
    windows.png
    archlinux.png
    gentoo.png
    knoppix.png
    linuxmint.png
    mepis.png
    opensuse.png
    slackware.png
    ubuntu.png
    kubuntu.png
    fluxbuntu.png
    aptosid.png
)

message(STATUS ${KDE4_DATA_DIR})
install( FILES ${KVIRTUAL_DATA_FILES} DESTINATION  ${KDE4_DATA_DIR}/kvirtual )
